...
            "state": "translated",
            "value": "Gelöscht."
          }
        }
      }
    },
    "Continue": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Weiter"
          }
...
            "state": "translated",
            "value": "Tageslimit"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Fertig"
          }
...
            "state": "translated",
            "value": "%@ am Tag festlegen"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
          }
...
